--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <header>
             <h1>📊 Marley's Newsletter CRM</h1>
             <p class="subtitle">Updated Lead Analytics Dashboard</p>
-            <p class="subtitle" style="font-size: 0.9em; margin-top: 5px;">December 3, 2025 - Momentous Campaign</p>
+            <p class="subtitle" style="font-size: 0.9em; margin-top: 5px;">December 8, 2025 - Momentous Campaign</p>
         </header>
 
         <div class="stats-grid">
@@ -286,9 +286,9 @@
 
     <script>
         const leadsData = [
-            {email: "rmurphy@nvp.com", clicks: 437, recent: 5, focus: true},
+            {email: "rmurphy@nvp.com", clicks: 445, recent: 8, focus: true},
             {email: "jgarlington@blharbert.com", clicks: 32, recent: 0, focus: true},
-            {email: "mharris@renderotrust.com", clicks: 31, recent: 2, focus: true},
+            {email: "mharris@renderotrust.com", clicks: 31, recent: 0, focus: true},
             {email: "jborden@harvestcapgroup.com", clicks: 30, recent: 0, focus: true},
             {email: "dgray@seminolecountyfl.gov", clicks: 28, recent: 0, focus: true},
             {email: "gcunha@doorlandonorth.com", clicks: 28, recent: 0, focus: true},
@@ -296,15 +296,16 @@
             {email: "travis.sparks@lbwl.com", clicks: 19, recent: 0, focus: true},
             {email: "steve@cozineadvisors.com", clicks: 11, recent: 0, focus: true},
             {email: "david@westonurban.com", clicks: 10, recent: 0, focus: true},
-            {email: "sean@temponovus.com", clicks: 10, recent: 1, focus: true},
+            {email: "sean@temponovus.com", clicks: 10, recent: 0, focus: true},
             {email: "forrest@intersection-ventures.com", clicks: 9, recent: 0, focus: true},
-            {email: "toddcromartie@icloud.com", clicks: 9, recent: 1, focus: true},
+            {email: "toddcromartie@icloud.com", clicks: 9, recent: 0, focus: true},
             {email: "roy@temponovus.com", clicks: 8, recent: 0, focus: true},
             {email: "glenn@gtsportsventures.com", clicks: 7, recent: 0, focus: true},
             {email: "jcohn@boynecapital.com", clicks: 7, recent: 0, focus: true},
             {email: "josh.lev@spwm.com", clicks: 7, recent: 0, focus: true},
             {email: "adam.zimmerman7@gmail.com", clicks: 6, recent: 0, focus: true},
             {email: "brett@benevolentcapital.com", clicks: 6, recent: 0, focus: true},
+            {email: "chris@innovatiocap.com", clicks: 6, recent: 1, focus: true},
             {email: "jfinger@mcguirewoods.com", clicks: 6, recent: 0, focus: true},
             {email: "jmaher@sopriscapital.com", clicks: 6, recent: 0, focus: true},
             {email: "mike@arisecp.com", clicks: 6, recent: 0, focus: true},
@@ -312,7 +313,6 @@
             {email: "ross@fencelinecapital.com", clicks: 6, recent: 0, focus: true},
             {email: "suraj@the4thquarter.co", clicks: 6, recent: 0, focus: true},
             {email: "trock@sasaki.com", clicks: 6, recent: 0, focus: true},
-            {email: "chris@innovatiocap.com", clicks: 5, recent: 0, focus: true},
             {email: "claudiav@magnoliahillpartners.com", clicks: 5, recent: 0, focus: true},
             {email: "greg@pantoneim.com", clicks: 5, recent: 0, focus: true},
             {email: "humblethyself32@gmail.com", clicks: 5, recent: 0, focus: true},
@@ -325,10 +325,10 @@
             {email: "ams@certuscap.com", clicks: 4, recent: 0, focus: true},
             {email: "bl@cruxfootball.com", clicks: 4, recent: 0, focus: true},
             {email: "connerpopa21@gmail.com", clicks: 4, recent: 0, focus: true},
-            {email: "d.bullard@athletiverse.io", clicks: 4, recent: 1, focus: true},
+            {email: "d.bullard@athletiverse.io", clicks: 4, recent: 0, focus: true},
             {email: "darryl.s.shaw@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "hdg@kylemoreholdings.com", clicks: 4, recent: 0, focus: true},
-            {email: "jay.kreske@aditumgroup.com", clicks: 4, recent: 2, focus: true},
+            {email: "jay.kreske@aditumgroup.com", clicks: 4, recent: 0, focus: true},
             {email: "kevin.m.huss@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "ljs120@georgetown.edu", clicks: 4, recent: 0, focus: true},
             {email: "matthew@sequenceequity.com", clicks: 4, recent: 0, focus: true},
@@ -337,28 +337,28 @@
             {email: "nick@bisonx.org", clicks: 4, recent: 0, focus: true},
             {email: "nnarasimhan162@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "patrick.zalupski@dreamfindershomes.com", clicks: 4, recent: 0, focus: true},
+            {email: "rodrigo.bueno2@bofa.com", clicks: 4, recent: 1, focus: true},
             {email: "tony.allegretti@sportingjax.com", clicks: 4, recent: 0, focus: true},
             {email: "wadams@oakviewgroup.com", clicks: 4, recent: 0, focus: true},
             {email: "adam@rabover.com", clicks: 3, recent: 0, focus: true},
             {email: "ben@sideyardsportspartners.com", clicks: 3, recent: 0, focus: true},
             {email: "cjeske@echo.global", clicks: 3, recent: 0, focus: true},
-            {email: "elewis@longridgepartners.ca", clicks: 3, recent: 2, focus: true},
+            {email: "elewis@longridgepartners.ca", clicks: 3, recent: 0, focus: true},
             {email: "gennaro@nextcoastsports.com", clicks: 3, recent: 0, focus: true},
             {email: "ggreen@alliance.us", clicks: 3, recent: 0, focus: true},
             {email: "karen@gtsportsventures.com", clicks: 3, recent: 0, focus: true},
-            {email: "larry.botel@jrpllc.com", clicks: 3, recent: 1, focus: true},
+            {email: "larry.botel@jrpllc.com", clicks: 3, recent: 0, focus: true},
             {email: "marques@championpartners.co", clicks: 3, recent: 0, focus: true},
             {email: "melvin@gamegain.io", clicks: 3, recent: 0, focus: true},
-            {email: "nicolasamuels@rogers.com", clicks: 3, recent: 1, focus: true},
+            {email: "nicolasamuels@rogers.com", clicks: 3, recent: 0, focus: true},
             {email: "peter@newmexicoutd.com", clicks: 3, recent: 0, focus: true},
             {email: "redstonerentalhomes@gmail.com", clicks: 3, recent: 0, focus: true},
-            {email: "rodrigo.bueno2@bofa.com", clicks: 3, recent: 0, focus: true},
             {email: "samuelberen@gmail.com", clicks: 3, recent: 0, focus: true},
             {email: "sean@cliffordcapital.io", clicks: 3, recent: 0, focus: true},
             {email: "spencer@summitventurestudio.com", clicks: 3, recent: 0, focus: true},
             {email: "tommy@prosperityventurepartners.com", clicks: 3, recent: 0, focus: true},
             {email: "adam.zimmerman7@gmail.co", clicks: 2, recent: 0, focus: false},
-            {email: "afontein@mcguirewoods.com", clicks: 2, recent: 1, focus: false},
+            {email: "afontein@mcguirewoods.com", clicks: 2, recent: 0, focus: false},
             {email: "andre@expeditionadvisory.com", clicks: 2, recent: 0, focus: false},
             {email: "awenig@sabcap.com", clicks: 2, recent: 0, focus: false},
             {email: "ben@lbkcapllc.com", clicks: 2, recent: 0, focus: false},
@@ -367,7 +367,7 @@
             {email: "bobm@whitecapsports.com", clicks: 2, recent: 0, focus: false},
             {email: "cburtner@mcrtrust.com", clicks: 2, recent: 0, focus: false},
             {email: "chefiksimo@yahoo.com", clicks: 2, recent: 0, focus: false},
-            {email: "cjhubbar@andrew.cmu.edu", clicks: 2, recent: 1, focus: false},
+            {email: "cjhubbar@andrew.cmu.edu", clicks: 2, recent: 0, focus: false},
             {email: "clayton@tebowgroup.com", clicks: 2, recent: 0, focus: false},
             {email: "dabrams@velocitycm.com", clicks: 2, recent: 0, focus: false},
             {email: "dan@eltoro.com", clicks: 2, recent: 0, focus: false},
@@ -376,6 +376,7 @@
             {email: "dbelfer@belfermgmt.com", clicks: 2, recent: 0, focus: false},
             {email: "digitalsquarevc@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "e24schwartz@gmail.com", clicks: 2, recent: 0, focus: false},
+            {email: "essang.bassey7@gmail.com", clicks: 2, recent: 1, focus: false},
             {email: "jaimemolinaosorio@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "jake.bargas@jll.com", clicks: 2, recent: 0, focus: false},
             {email: "jake@stormlightventures.com", clicks: 2, recent: 0, focus: false},
@@ -403,19 +404,23 @@
             {email: "ron.mattson@honeywell.com", clicks: 2, recent: 0, focus: false},
             {email: "scott.v.donnelly@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "sf@binnacle-group.com", clicks: 2, recent: 0, focus: false},
+            {email: "spatterson@prosportsconsulting.net", clicks: 2, recent: 1, focus: false},
             {email: "spencerkaplan7@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "srosen@resiliencecapital.com", clicks: 2, recent: 0, focus: false},
             {email: "staff@sportingjax.com", clicks: 2, recent: 0, focus: false},
             {email: "stephen@sccapitalllc.com", clicks: 2, recent: 0, focus: false},
             {email: "tatz@roaringbrookholdings.com", clicks: 2, recent: 0, focus: false},
-            {email: "warrensmithusl@gmail.com", clicks: 2, recent: 1, focus: false},
+            {email: "warrensmithusl@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "wgiaco@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "wylie.nelson@h5datacenters.com", clicks: 2, recent: 0, focus: false},
             {email: "aidan.hartman@airforceathletics.org", clicks: 1, recent: 0, focus: false},
             {email: "akaminski@cliffwater.com", clicks: 1, recent: 0, focus: false},
-            {email: "asandler@temeritycap.com", clicks: 1, recent: 1, focus: false},
+            {email: "ar@paragonadvisorygroup.com", clicks: 1, recent: 1, focus: false},
+            {email: "ari@berrislawfirm.com", clicks: 1, recent: 1, focus: false},
+            {email: "asandler@temeritycap.com", clicks: 1, recent: 0, focus: false},
             {email: "atrick.zalupski@dreamfindershomes.com", clicks: 1, recent: 0, focus: false},
             {email: "bobbyhenebry@gmail.com", clicks: 1, recent: 0, focus: false},
+            {email: "brantley.basinger@nashville-sc.com", clicks: 1, recent: 1, focus: false},
             {email: "carolyn.stoner@aoshearman.com", clicks: 1, recent: 0, focus: false},
             {email: "ccompton@magnoliahillpartners.com", clicks: 1, recent: 0, focus: false},
             {email: "charles33harris@gmail.com", clicks: 1, recent: 0, focus: false},
@@ -428,19 +433,20 @@
             {email: "dtu7rr@virginia.edu", clicks: 1, recent: 0, focus: false},
             {email: "emaury@atriumcg.com", clicks: 1, recent: 0, focus: false},
             {email: "ericshuffler@yahoo.com", clicks: 1, recent: 0, focus: false},
-            {email: "essang.bassey7@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "fatima@hdventuresllc.com", clicks: 1, recent: 0, focus: false},
             {email: "global@artestmanagementgroup.com", clicks: 1, recent: 0, focus: false},
             {email: "gode.k@cacnations.com", clicks: 1, recent: 0, focus: false},
+            {email: "greg@shortcornermedia.com", clicks: 1, recent: 1, focus: false},
             {email: "gsmiley@geraldsmiley.com", clicks: 1, recent: 0, focus: false},
             {email: "hello@shortcornermedia.com", clicks: 1, recent: 0, focus: false},
             {email: "ian.gensler@sagespring.com", clicks: 1, recent: 0, focus: false},
             {email: "ivernonscott26@yahoo.com", clicks: 1, recent: 0, focus: false},
             {email: "jacqueline.leigh.grant@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "jefthimiou@gmail.com", clicks: 1, recent: 0, focus: false},
+            {email: "jennabuehler@gmail.com", clicks: 1, recent: 1, focus: false},
             {email: "jlohe@clrbrk.com", clicks: 1, recent: 0, focus: false},
             {email: "john.choi@welcomelend.com", clicks: 1, recent: 0, focus: false},
-            {email: "jonathansmiga@gmail.com", clicks: 1, recent: 1, focus: false},
+            {email: "jonathansmiga@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "jozy@sogility.net", clicks: 1, recent: 0, focus: false},
             {email: "jshields@creasote.com", clicks: 1, recent: 0, focus: false},
             {email: "jwarner@equilibria.capital", clicks: 1, recent: 0, focus: false},
@@ -449,13 +455,16 @@
             {email: "malcolm@vettedsports.com", clicks: 1, recent: 0, focus: false},
             {email: "matt@pantoneim.com", clicks: 1, recent: 0, focus: false},
             {email: "max@bouventures.com", clicks: 1, recent: 0, focus: false},
+            {email: "mbowen@laneone.com", clicks: 1, recent: 1, focus: false},
             {email: "megan@proathletecommunity.com", clicks: 1, recent: 0, focus: false},
             {email: "meganlynnmcnulty@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "micah@rimrockcompanies.com", clicks: 1, recent: 0, focus: false},
+            {email: "michael@kmzevents.com", clicks: 1, recent: 1, focus: false},
             {email: "michael@prometheusalts.com", clicks: 1, recent: 0, focus: false},
             {email: "mshah@gtsportsventures.com", clicks: 1, recent: 0, focus: false},
             {email: "mwaldrip@dauntlesscapital.com", clicks: 1, recent: 0, focus: false},
             {email: "nick@nocapsports.io", clicks: 1, recent: 0, focus: false},
+            {email: "nishant@cleansheetcapital.com", clicks: 1, recent: 1, focus: false},
             {email: "olliecantrill@insighteleven.co.uk", clicks: 1, recent: 0, focus: false},
             {email: "pablo@turningpointusa.org", clicks: 1, recent: 0, focus: false},
             {email: "r.paul.sabin@gmail.com", clicks: 1, recent: 0, focus: false},
@@ -467,7 +476,6 @@
             {email: "scott.sams3@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "sfriedman@hitequity.com", clicks: 1, recent: 0, focus: false},
             {email: "smclaughlin@drivencapital.com", clicks: 1, recent: 0, focus: false},
-            {email: "spatterson@prosportsconsulting.net", clicks: 1, recent: 0, focus: false},
             {email: "sswierczewski@yahoo.com", clicks: 1, recent: 0, focus: false},
             {email: "susanne.timosci@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "syoung@fccincinnati.com", clicks: 1, recent: 0, focus: false},
@@ -476,7 +484,8 @@
             {email: "trey@rtaylorins.com", clicks: 1, recent: 0, focus: false},
             {email: "tunde@eaglesportholdings.com", clicks: 1, recent: 0, focus: false},
             {email: "vancekvoss@gmail.com", clicks: 1, recent: 0, focus: false},
-            {email: "vpainter757@gmail.com", clicks: 1, recent: 0, focus: false}
+            {email: "vpainter757@gmail.com", clicks: 1, recent: 0, focus: false},
+            {email: "west@clark-ventures.com", clicks: 1, recent: 1, focus: false}
         ];
 
         function getTier(clicks) {
